# app-ledger-ardor-main

./: .clang-format  .gitignore  CHANGELOG.txt  LICENSE  Makefile  README.md  createTxnTypes.py  make-all  txtypes.txt
.github/workflows/: build_and_functional_tests.yml  ci-workflow.yml  codeql_checks.yml  coding_style_checks.yml
src/: app_main.c  ardor.c  ardor.h  authAndSignTxn.c  config.c  config.h  curve25519_i64.c  curve25519_i64.h  curveConversion.c  decryptMsg.c  encryptDecryptMsg.c  encryptMsg.c  getPublicKey.c  getPublicKeyAndChaincode.c  getVersion.c  io_helper.c  io_helper.h  main.c  reedSolomon.c  reedSolomon.h  returnValues.h  settings.c  settings.h  showAddress.c  signToken.c  transactionParser.c  transactionParser.h  txnTypeLists.c  ux.h  uxI.h
src/aes/: aes-cbc.c  aes-ccm.c  aes-ctr.c  aes-gcm.c  aes-internal-dec.c  aes-internal-enc.c  aes-unwrap.c  aes-wrap.c
src/ui/: blind_sign_bagl.c  blind_sign_bagl.h  blind_sign_nbgl.h  display.h  glyph_symbols.h  menu.h  menu_bagl.c  menu_nbgl.c  nbgl_blind_sign.c  show_address_bagl.c  show_address_nbgl.c  sign_token_bagl.c  sign_token_nbgl.c  sign_tx_bagl.c  sign_tx_ngbl.c
tests/: CMakeLists.txt  ardor_command_sender.py  conftest.py  constants.py  requirements.txt  test_auth_sign_tx.py  test_encrypt_decrypt_message.py  test_get_public_key.py  test_get_version.py  test_show_address.py  test_sign_token.py  utils.py
tests/include/: os.h
tests/src/: test_reedSolomon.c
